testing/macro-tests/tests/ui/generated_requires_optional_timestamp.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_optional_timestamp.rs:24:21
   |
24 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
